# CG-UFPel-Rust

./: Cargo.toml
configs/: model_config.json
resources/objects/axis_arrows/: axis_arrows.mtl
src/: camera.rs  common.rs  lib.rs  macros.rs  main.rs  mesh.rs  model.rs  model_pos.rs  scene.rs  shader.rs
src/learn_opengl/: common.rs  mod.rs  model.rs  shader.rs
src/model_pos/: animation.rs  config.rs  curve.rs  mod.rs
